# arctellis

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: azure-static-web-apps-happy-flower-0b5b6c803.yml  azure-static-web-apps-happy-ground-00fabdb03.yml  azure-static-web-apps-polite-wave-0de9bf303.yml
apps/backend/: .env.example  Dockerfile  pyproject.toml
apps/backend/scripts/: fetch_schema.py  verify_agent.py  verify_graph_auth.py  verify_sharepoint.py
apps/backend/src/app/: agent.py  auth.py  config.py  group_auth.py  main.py  session.py
apps/backend/src/app/data/: sharepoint_schema.md
apps/backend/src/app/routers/: chat.py
apps/backend/src/app/services/: graph_auth.py  sharepoint.py
apps/backend/src/app/tools/: list_tools.py
apps/backend/tests/: test_accuracy.py  test_agent.py  test_auth.py  test_chat.py  test_config.py  test_graph_auth.py  test_group_auth.py  test_health.py  test_list_tools.py  test_sharepoint_service.py
apps/frontend/: .env.local.example  jest.config.ts  jest.setup.ts  next.config.ts  package-lock.json  package.json
brain/Daily Notes/: 2026-06-09.md
brain/stories/backend/: BE-00 Monorepo and Backend Project Setup.md  BE-01 Entra App Registration and Graph Auth.md  BE-02 SharePoint Service Read Items and Schema.md  BE-03 SharePoint Data Caching.md  BE-04 List Data Tools.md  BE-05 LangChain Agent and Azure OpenAI.md  BE-06 Conversation Endpoint with SSE Streaming.md  (+9 more)
docs/: Architecture-SharePoint-List-AI-Assistant.md  PRD-SharePoint-List-AI-Assistant.md
docs/guides/: azure-entra-id-setup.md  azure-infrastructure.md
(+113 files in other folders)
